--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="shortcut icon" type="x-icon" href="/Images/logo.png" />
+    <link rel="icon" href="/Images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zam Zam Bags & Boutique</title>
   </head>
