--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" type="x-icon" href="/Images/logo.png" />
-    <link rel="icon" href="/Images/logo.png" />
+    <link rel="shortcut icon" type="x-icon" href="/Images/ZamZam-Logo-6.jpg" />
+    <link rel="icon" href="/Images/ZamZam-Logo-6.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zam Zam Bags & Boutique</title>
   </head>
